crates/plotnik-tests/tests/02-parser/recovery_validation/error_with_bang_negation.txt
Q = (program (ERROR !name))
------------------ DIAGNOSTICS -------------------
error: `(ERROR)` cannot have children
 --> query.ptk:1:21
  |
1 | Q = (program (ERROR !name))
  |                     ^^^^^
  |
help: remove the children
  |
1 - Q = (program (ERROR !name))
1 + Q = (program (ERROR ))
  |
help: `(ERROR)` matches any error node as a leaf. Use `MISSING` when matching a token inserted by parser recovery
